# ZeroProto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TUTORIAL.md  instructions.md  test_schema.zp
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: roundtrip.rs
crates/zeroproto/: Cargo.toml
crates/zeroproto-cli/: Cargo.toml
crates/zeroproto-cli/src/: main.rs
crates/zeroproto-compiler/: Cargo.toml
crates/zeroproto-compiler/src/: ast.rs  codegen.rs  ir.rs  lib.rs  parser.rs  primitives.rs  validator.rs
crates/zeroproto-macros/: Cargo.toml
crates/zeroproto-macros/src/: lib.rs
crates/zeroproto/examples/: basic_usage.rs  debug_usage.rs  performance.rs  schema_example.rs
crates/zeroproto/src/: builder.rs  errors.rs  lib.rs  primitives.rs  reader.rs  vector.rs
docs/: specifications.md
examples/: performance.rs  schema_example.rs
schemas/: example.zp
test-project/: .gitignore  Cargo.toml  README.md  build.rs
test-project/schemas/: example.zp
test-project/src/: main.rs
test_output/: test_schema.rs
tests/: integration_tests.rs
