[package]
name = "zeroproto-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Command-line interface for ZeroProto"
readme = "../../README.md"

[[bin]]
name = "zeroproto"
path = "src/main.rs"

[dependencies]
zeroproto-compiler = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
color-eyre = "0.6"
notify = "6.1"
globset = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
