[package]
name = "zeroproto-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "ZeroProto schema compiler and code generator"
readme = "../../README.md"

[dependencies]
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.5"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
